# glue-llm

./: .gitignore  AGENTS.md  ASYNC_CONVERSION.md  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  README.md  TOOL_SUPPORT_SUMMARY.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini
benchmarks/: aaak_live_benchmark.py  aaak_local_micro_benchmark.py  glue_orchestration_benchmark.py  standard_benchmark.py  streaming_benchmark.py  workflow_benchmark.py
docs/: AAAK_COMPRESSION.md  AGENTS.md  API.md  ARCHITECTURE.md  BATCH_PROCESSING.md  CLI.md  CONFIGURATION.md  CONNECTION_POOLING.md  CONTEXT_OPTIMIZATION.md  COST_TRACKING.md  DEVELOPMENT.md  EMBEDDINGS.md  ERROR_HANDLING.md  EVALUATION.md  EXTENDING.md  GETTING_STARTED.md  GUARDRAILS.md  HOOKS.md  IMPLEMENTATION_SUMMARY.md  MCP.md  MIGRATION.md  MODELS.md  OBSERVABILITY.md  PERFORMANCE.md  QUICK_REFERENCE.md  RATE_LIMITING.md  README.md  RETRY.md  RUNTIME.md  TIMEOUTS.md  TOOL_EXECUTION.md  TROUBLESHOOTING.md  WORKFLOWS_API.md  WORKFLOW_PATTERNS.md  error-handling.md
examples/: api_key_pool_example.py  basic_usage.py  batch_processing.py  configuration_example.py  conversation_summarization_example.py  correlation_ids_and_shutdown.py  cost_tracking_example.py  data_extraction.py  document_processing.py  dynamic_tool_routing_demo.py  embeddings_example.py  error_handling_example.py  eval_recording.py  guardrails_example.py  hooks_advanced.py  hooks_example.py  list_models_example.py  logging_example.py  mcp_tools_example.py  opentelemetry_tracing.py  production_chatbot.py  pydantic_tool_params.py  (+8 more)
(+138 files in other folders)
